# ss_crusty

./: .gitignore  CNAME  Cargo.toml  LICENSE  MAKEFILE  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tag_and_bag.sh
.github/: CODEOWNERS
.github/workflows/: docs.yaml  release.yaml
parsers/: Cargo.toml
parsers/src/: csv_parser.rs  json_parser.rs  lib.rs  parser_csv.rs  parser_json.rs  parser_txt.rs  parser_xml.rs  test.rs  txt_parser.rs  xml_parser.rs
parsers/test_data/: urls.csv  urls.json  urls.txt  urls.xml
search.desc/ss_crusty/: ss_crusty-desc-0-.js
search.index/: 2294e39fdbf2.js  377109905b13.js  root.js
search.index/crateNames/: 88ab83a32e52.js
search.index/desc/: 33156f97ded5.js
search.index/entry/: 7129f9a6db59.js
search.index/function/: 36c668256483.js
search.index/generic_inverted_index/: b29d8ab7f707.js
search.index/name/: 5be547d2fa00.js
search.index/normalizedName/: dcd190ff6ef2.js
search.index/path/: ec17b6a6b3b7.js
search.index/type/: dc0852887eda.js
src/: cli.rs  io.rs  main.rs  scrape.rs
src/ss_crusty/: cli.rs.html  io.rs.html  main.rs.html  scrape.rs.html
ss_crusty/: all.html  fn.main.html  index.html  sidebar-items.js  struct.PageResult.html
ss_crusty/cli/: enum.UserAgent.html  fn.get_user_agent_string.html  fn.parse_args_and_client.html  index.html  sidebar-items.js  struct.Args.html
ss_crusty/io/: fn.read_file.html  fn.write_file.html  index.html  sidebar-items.js
ss_crusty/scrape/: fn.extract_links.html  fn.fetch_and_extract.html  fn.fetch_html.html  index.html  (+1 more)
(+15 files in other folders)
