[package]
name = "ss_crusty"
version = "0.1.0"
edition = "2024"

[dependencies]
parsers = { path = "./parsers" }
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
scraper = "0.24.0"
rayon = "1.11.0"