[package]
name = "ss_crusty"
version = "0.2.1"
edition = "2024"
authors = ["Batur Akçura fairdose.dev@gmail.com"]
repository = "https://github.com/Fairdose/ss_crusty"
homepage = "https://ss-crusty.fairdose.net/"
documentation = "https://ss-crusty.fairdose.net/"

[dependencies]
parsers = { path = "./parsers" }
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
scraper = "0.24.0"
rayon = "1.11.0"
log = "0.4"
env_logger = "0.11"